syntax = "proto3";

option csharp_namespace = "StockApi.Grpc.Protos";

import "google/protobuf/empty.proto";

service CrudProductService {
	rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
	rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
	rpc DeleteProduct (ProductIdRequest) returns (ProductDeletedResponse);
	rpc GetProductById (ProductIdRequest) returns (ProductResponse);
	rpc GetProducts (google.protobuf.Empty) returns (ProductListResponse);
}

message CreateProductRequest {
   string name = 1;
   string description = 2;
   string price = 3;
   int32 quantity = 4;
   CategoryEnum category = 5;
}

message UpdateProductRequest {
   string id = 1;
   string name = 2;
   string description = 3;
   string price = 4;
   int32 quantity = 5;
   CategoryEnum category = 6;
}

message ProductIdRequest {
   string id = 1;
}

message ProductResponse {
   string id = 1;
   string name = 2;
   string description = 3;
   string price = 4;
   int32 quantity = 5;
   string category = 6;
}

message ProductDeletedResponse {
    string message = 1;
}

message ProductListResponse {
    repeated ProductResponse products = 1;
}

enum CategoryEnum {
	Electronics = 0;
    Clothing = 1;
    Food = 2;
    Furniture = 3;
    Books = 4;
    Toys = 5;
    Beauty = 6;
    Sports = 7;
    Automotive = 8;
    Health = 9;
}

